save-option extensions.

--- a/cubepdf/app.config
+++ b/cubepdf/app.config
@@ -6,7 +6,10 @@
         <section name="CubePDF_UI.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
     </sectionGroup>
 </configSections>
-<startup><supportedRuntime version="v2.0.50727"/></startup><userSettings>
+<startup>
+  <supportedRuntime version="v2.0.50727"/>
+</startup>
+  <userSettings>
         <CubePDF.Properties.Settings>
             <setting name="INPUT_FILENAME" serializeAs="String">
                 <value>TempInput.ps</value>
