--- a/cliffsharp/Cliff/Cliff.csproj
+++ b/cliffsharp/Cliff/Cliff.csproj
@@ -78,7 +78,7 @@
     <Compile Include="GsDevice.cs" />
     <Compile Include="GsPaper.cs" />
     <Compile Include="PdfReader.cs" />
-    <Compile Include="PdfUtility.cs" />
+    <Compile Include="Utility.cs" />
     <Compile Include="PdfWriter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
