add merge function but remain ippan user test

--- a/cubepdf/cubepdf2008.csproj
+++ b/cubepdf/cubepdf2008.csproj
@@ -118,6 +118,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="PDFMerger.cs" />
     <Compile Include="PdfObject.cs">
       <SubType>Form</SubType>
     </Compile>
