--- a/cubepdf/cubepdf2008.csproj
+++ b/cubepdf/cubepdf2008.csproj
@@ -97,7 +97,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\release\cliff.dll</HintPath>
     </Reference>
-    <Reference Include="itextsharp, Version=5.0.5.0, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL" />
+    <Reference Include="itextsharp, Version=5.0.5.0, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\release\itextsharp.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
