--- a/cliffsharp/Cliff/Cliff.csproj
+++ b/cliffsharp/Cliff/Cliff.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.30703</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{3E070B74-07FD-4103-AE32-2670285A5091}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -41,7 +41,7 @@
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
-    <OutputPath>..\..\release\</OutputPath>
+    <OutputPath>..\..\release\x64\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
@@ -77,9 +77,7 @@
     <Compile Include="GsConverter.cs" />
     <Compile Include="GsDevice.cs" />
     <Compile Include="GsPaper.cs" />
-    <Compile Include="PdfReader.cs" />
     <Compile Include="Utility.cs" />
-    <Compile Include="PdfWriter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
