--- a/cubepdf-setting/cubepdf-setting.csproj
+++ b/cubepdf-setting/cubepdf-setting.csproj
@@ -107,6 +107,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Translator.cs" />
     <Compile Include="UserSetting.cs" />
   </ItemGroup>
   <ItemGroup>
