--- a/cubepdf-engine-test/cubepdf-engine-test.csproj
+++ b/cubepdf-engine-test/cubepdf-engine-test.csproj
@@ -86,7 +86,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\release\cubepdf-engine.dll</HintPath>
     </Reference>
-    <Reference Include="nunit.framework, Version=2.5.10.11092, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL" />
+    <Reference Include="nunit.framework, Version=2.5.10.11092, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>.\nunit.framework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
@@ -136,7 +139,9 @@
   -->
   <PropertyGroup>
     <PostBuildEvent>copy $(TargetPath) $(ProjectDir)
-copy $(ProjectDir)..\release\cubepdf-engine.dll $(ProjectDir)</PostBuildEvent>
+copy $(ProjectDir)..\release\$(PlatformName)\gsdll32.dll $(ProjectDir)
+copy $(ProjectDir)..\release\$(PlatformName)\itextsharp.dll $(ProjectDir)
+copy $(ProjectDir)..\release\$(PlatformName)\cubepdf-engine.dll $(ProjectDir)</PostBuildEvent>
     <PreBuildEvent>
     </PreBuildEvent>
   </PropertyGroup>
