--- a/cubepdf-redirect/cubepdf-redirect2008.csproj
+++ b/cubepdf-redirect/cubepdf-redirect2008.csproj
@@ -118,7 +118,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FileNameModifier.cs" />
-    <Compile Include="ForCreateProcessAsUser.cs" />
+    <Compile Include="ProcessAsUser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utility.cs" />
