ソリューションファイルを Visual Studio 2010 用に変更．

--- a/cubepdf/app.config
+++ b/cubepdf/app.config
@@ -1,40 +1,38 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <configuration>
-    <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="CubePDF.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-        </sectionGroup>
-    </configSections>
-    <startup useLegacyV2RuntimeActivationPolicy="true">
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/>
-        <supportedRuntime version="v2.0.50727"/>
-    </startup>
-    <userSettings>
-        <CubePDF.Properties.Settings>
-            <setting name="UserProgramFilter" serializeAs="String">
-                <value>実行可能プログラム (*.exe;*.bat)|*.exe;*.bat|すべてのファイル(*.*)|*.*</value>
-            </setting>
-            <setting name="InputPathFilter" serializeAs="String">
-                <value>PDF ファイル (*.pdf)|*.pdf|PS ファイル (*.ps)|*.ps|EPS ファイル (*.eps)|*.eps</value>
-            </setting>
-            <setting name="About" serializeAs="String">
-                <value>CubePDF について</value>
-            </setting>
-            <setting name="Error" serializeAs="String">
-                <value>エラー</value>
-            </setting>
-            <setting name="PasswordUnmatched" serializeAs="String">
-                <value>入力されたパスワードが一致しません。</value>
-            </setting>
-            <setting name="FileExists" serializeAs="String">
-                <value>{0} は既に存在します。{1}しますか？</value>
-            </setting>
-            <setting name="OverwritePrompt" serializeAs="String">
-                <value>上書きの確認</value>
-            </setting>
-            <setting name="FileNotSpecified" serializeAs="String">
-                <value>ファイルが指定されていません。</value>
-            </setting>
-        </CubePDF.Properties.Settings>
-    </userSettings>
+	<configSections>
+		<sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+			<section name="CubePDF.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
+		</sectionGroup>
+	</configSections>
+	<startup useLegacyV2RuntimeActivationPolicy="true">
+	<supportedRuntime version="v2.0.50727"/></startup>
+	<userSettings>
+		<CubePDF.Properties.Settings>
+			<setting name="UserProgramFilter" serializeAs="String">
+				<value>実行可能プログラム (*.exe;*.bat)|*.exe;*.bat|すべてのファイル(*.*)|*.*</value>
+			</setting>
+			<setting name="InputPathFilter" serializeAs="String">
+				<value>PDF ファイル (*.pdf)|*.pdf|PS ファイル (*.ps)|*.ps|EPS ファイル (*.eps)|*.eps</value>
+			</setting>
+			<setting name="About" serializeAs="String">
+				<value>CubePDF について</value>
+			</setting>
+			<setting name="Error" serializeAs="String">
+				<value>エラー</value>
+			</setting>
+			<setting name="PasswordUnmatched" serializeAs="String">
+				<value>入力されたパスワードが一致しません。</value>
+			</setting>
+			<setting name="FileExists" serializeAs="String">
+				<value>{0} は既に存在します。{1}しますか？</value>
+			</setting>
+			<setting name="OverwritePrompt" serializeAs="String">
+				<value>上書きの確認</value>
+			</setting>
+			<setting name="FileNotSpecified" serializeAs="String">
+				<value>ファイルが指定されていません。</value>
+			</setting>
+		</CubePDF.Properties.Settings>
+	</userSettings>
 </configuration>
