--- a/cubepdf/app.config
+++ b/cubepdf/app.config
@@ -6,6 +6,7 @@
 		</sectionGroup>
 	</configSections>
 	<startup useLegacyV2RuntimeActivationPolicy="true">
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client" />
 	<supportedRuntime version="v2.0.50727"/></startup>
 	<userSettings>
 		<CubePDF.Properties.Settings>
