ユーザ設定情報を操作するクラスを修正．

--- a/cubepdf-engine/cubepdf-engine.csproj
+++ b/cubepdf-engine/cubepdf-engine.csproj
@@ -103,6 +103,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Message.cs" />
+    <Compile Include="ParameterList.cs" />
     <Compile Include="PDFModifier.cs" />
     <Compile Include="PostProcess.cs" />
     <Compile Include="Parameter.cs" />
