cubepdf-redirect.exe の機能を cubepdf.exe に統合。

--- a/cubepdf/cubepdf.csproj
+++ b/cubepdf/cubepdf.csproj
@@ -96,6 +96,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommandLine.cs" />
+    <Compile Include="FileNameModifier.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
