--- a/cubepdf/cubepdf.csproj
+++ b/cubepdf/cubepdf.csproj
@@ -97,6 +97,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommandLine.cs" />
+    <Compile Include="ExtensionList.cs" />
     <Compile Include="FileNameModifier.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
