--- a/cubepdf-engine-test/cubepdf-engine-test.csproj
+++ b/cubepdf-engine-test/cubepdf-engine-test.csproj
@@ -96,6 +96,7 @@
     <Compile Include="CubePDFEngineTest.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserSettingTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
