FileNameModifier.cs を cubepdf-engine に移動

--- a/cubepdf-engine/cubepdf-engine.csproj
+++ b/cubepdf-engine/cubepdf-engine.csproj
@@ -93,6 +93,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Converter.cs" />
+    <Compile Include="FileNameModifier.cs" />
     <Compile Include="GsConverter.cs">
       <SubType>Code</SubType>
     </Compile>
