--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ Ankh.NoLoad
 _ReSharper*/
 *.resharper
 [Tt]est[Rr]esult*
+!cubepdf-engine-test/examples/*.*
 
 #Project files
 [Bb]uild/
@@ -43,3 +44,4 @@ _ReSharper*/
 
 # Office Temp Files
 ~$*
+
