--- a/.gitignore
+++ b/.gitignore
@@ -24,11 +24,16 @@
 *.lib
 *.sbr
 *.sdf
+*.dll
+*.sh
 ipch/
 obj/
 [Bb]in
 [Dd]ebug*/
 [Rr]elease/
+[Dd]ocument/
+[Cc]ustomize/
+[Aa]rchive/
 Ankh.NoLoad
 
 #Tooling
