--- a/cubepdf/app.config
+++ b/cubepdf/app.config
@@ -4,4 +4,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client" />
     <supportedRuntime version="v2.0.50727"/>
   </startup>
+  <runtime>
+    <generatePublisherEvidence enabled="false"/>
+  </runtime>
 </configuration>
