--- a/cubepdf-engine-test/cubepdf-engine-test.csproj
+++ b/cubepdf-engine-test/cubepdf-engine-test.csproj
@@ -6,7 +6,7 @@
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{2779F1A0-5F12-40DF-AFC5-64F98C0B87F6}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>CubePDF</RootNamespace>
     <AssemblyName>cubepdf-engine-test</AssemblyName>
@@ -90,7 +90,7 @@
     </Reference>
     <Reference Include="nunit.framework, Version=2.5.10.11092, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>.\nunit.framework.dll</HintPath>
+      <HintPath>C:\Program Files (x86)\NUnit 2.5.10\bin\net-2.0\framework\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -99,7 +99,6 @@
   <ItemGroup>
     <Compile Include="ConverterTest.cs" />
     <Compile Include="FileNameModifierTest.cs" />
-    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserSettingTest.cs" />
     <Compile Include="UtilityTest.cs" />
@@ -150,9 +149,9 @@
   -->
   <PropertyGroup>
     <PostBuildEvent>copy $(TargetPath) $(ProjectDir)
-copy $(ProjectDir)..\release\$(PlatformName)\gsdll32.dll $(ProjectDir)
-copy $(ProjectDir)..\release\$(PlatformName)\itextsharp.dll $(ProjectDir)
-copy $(ProjectDir)..\release\$(PlatformName)\cubepdf-engine.dll $(ProjectDir)</PostBuildEvent>
+copy $(TargetDir)itextsharp.dll $(ProjectDir)
+copy $(TargetDir)cubepdf-engine.dll $(ProjectDir)
+copy $(ProjectDir)..\release\$(PlatformName)\gsdll32.dll $(ProjectDir)</PostBuildEvent>
     <PreBuildEvent>
     </PreBuildEvent>
   </PropertyGroup>
