--- a/CubePdfEngineTests/CubePdfEngineTests.csproj
+++ b/CubePdfEngineTests/CubePdfEngineTests.csproj
@@ -100,6 +100,7 @@
     <Compile Include="ConverterTest.cs" />
     <Compile Include="FileNameModifierTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserSettingSaver.cs" />
     <Compile Include="UserSettingTest.cs" />
     <Compile Include="UtilityTest.cs" />
   </ItemGroup>
