--- a/CubePdfEngineTests/CubePdfEngineTests.csproj
+++ b/CubePdfEngineTests/CubePdfEngineTests.csproj
@@ -98,7 +98,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConverterTest.cs" />
-    <Compile Include="FileNameModifierTest.cs" />
+    <Compile Include="DocumentNameTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserSettingSaver.cs" />
     <Compile Include="UserSettingTest.cs" />
