パスに関するクラス名を変更

--- a/CubePdf.Engine/CubePdf.Engine.csproj
+++ b/CubePdf.Engine/CubePdf.Engine.csproj
@@ -118,7 +118,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="UserSetting.cs" />
-    <Compile Include="Utility.cs">
+    <Compile Include="Path.cs">
       <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
