ビルドオプションを削除

--- a/CubePdf/CubePdf.csproj
+++ b/CubePdf/CubePdf.csproj
@@ -202,8 +202,7 @@
   </Target>
   -->
   <PropertyGroup>
-    <PostBuildEvent>copy $(TargetPath) $(ProjectDir)..\release\$(PlatformName)\
-copy $(TargetPath).config $(ProjectDir)..\release\$(PlatformName)\
-copy $(TargetDir)*.dll $(ProjectDir)..\Release\$(PlatformName)\</PostBuildEvent>
+    <PostBuildEvent>
+    </PostBuildEvent>
   </PropertyGroup>
 </Project>
