メイン画面を英語および日本語に対応

--- a/CubePdf/CubePdf.csproj
+++ b/CubePdf/CubePdf.csproj
@@ -133,6 +133,9 @@
     <Compile Include="Appearance.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="MainForm.ja.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -146,6 +149,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="VersionDialog.ja.resx">
+      <DependentUpon>VersionDialog.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="VersionDialog.resx">
       <DependentUpon>VersionDialog.cs</DependentUpon>
     </EmbeddedResource>
