add UTF-8 setting

--- a/CubePdf/app.config
+++ b/CubePdf/app.config
@@ -21,6 +21,8 @@
         <IgnoresException value="False" />
         <ConversionPattern value="%date [%3thread] [%-5level] %logger{2} - %message%n" />
       </layout>
+
+      <encoding value="UTF-8" />
     </appender>
 
     <root>
