--- a/CubePdf/app.config
+++ b/CubePdf/app.config
@@ -6,23 +6,18 @@
   
   <log4net>
     <appender name="InfoLogAppender" type="log4net.Appender.RollingFileAppender">
-      <param name="RollingStyle" value="Size" />
       <param name="File" value="${ProgramData}\CubeSoft\CubePdf\Log\CubePdf.log" />
-      <param name="MaximumFileSize" value="100KB" />
-      <param name="maxSizeRollBackups" value="10" />
+      <param name="Encoding" value="UTF-8" />
+      <param name="RollingStyle" value="Size" />
+      <param name="MaximumFileSize" value="1MB" />
+      <param name="MaxSizeRollBackups" value="5" />
       <param name="AppendToFile" value="True" />
 
-      <filter type="log4net.Filter.LevelRangeFilter">
-        <param name="LevelMax" value="FATAL" />
-        <param name="LevelMin" value="DEBUG" />
-      </filter>
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
 
       <layout type="log4net.Layout.PatternLayout">
-        <IgnoresException value="False" />
-        <ConversionPattern value="%date [%3thread] [%-5level] %logger{2} - %message%n" />
+        <param name="ConversionPattern" value="%date [%-5level] %logger{1} - %message%n" />
       </layout>
-
-      <encoding value="UTF-8" />
     </appender>
 
     <root>
